# vvl1

./: .gitignore  AM.xlsx  AffiliateMarketing.xlsx  Dockerfile  README.md  am1.excalidraw  main.py  pyproject.toml
src_agentz/: helperz_agentz.py  team1.py
src_agentz/models/: article.py
src_agentz/source_agno/: 02_agent_with_tools.py  _01_basic_agent.py  _02_agent_firestore.py  _03_structured_output.py  _04_agent_articles_with_strucured_output.py  _05_generate_images.py  _06_dallet_tools.py
src_web/: __init__.py  main.py  main_old.py  requirements.txt
src_web/models/: article.py
src_web/routes/: __init__.py  routes_articles.py  routes_basic.py  routes_blogs.py
src_web/static/css/: bulma.css  chat.css  old_styles.css  styles.css
src_web/static/my_web_app/: package-lock.json  package.json
src_web/static/my_web_app/js/: lang.js  login-auth.js  scripts.js  stripe.js  ws.js
src_web/static/templates/articles/: article_from_fb.html  basic_article.html
src_web/static/templates/basic/: about.html  home.html  privacy.html  terms.html
src_web/static/templates/blogs/: blog_from_fb.html
