[project]
name = "vvl1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.4.5",
    "duckduckgo-search>=8.0.1",
    "fastapi>=0.115.12",
    "firebase-admin>=6.8.0",
    "icecream>=2.1.4",
    "jinja2>=3.1.6",
    "openai>=1.77.0",
    "uvicorn>=0.34.2",
]
